@@ -1,0 +1,10 @@
+BINUTILS_DIR=binutils-2.16.1
+GCC_CORE_DIR=gcc-3.3.6
+GCC_DIR=gcc-4.1.1
+GLIBC_DIR=glibc-2.3.5
+LINUX_DIR=linux-2.6.15.4
+LINUX_SANITIZED_HEADER_DIR=linux-libc-headers-2.6.12.0
+GLIBCTHREADS_FILENAME=glibc-linuxthreads-2.3.5
+GDB_DIR=gdb-6.5
+GLIBC_EXTRA_CONFIG="$GLIBC_EXTRA_CONFIG --with-tls --with-__thread  --enable-kernel=2.4.18"
+GLIBC_ADDON_OPTIONS="=nptl"
